src/test/ui/track-diagnostics/track.stderr
error[E0425]: cannot find value `rust` in this scope
  --> $DIR/track.rs:5:11
   |
LL |     break rust
   |           ^^^^ not found in this scope
-Ztrack-diagnostics: created at compiler/rustc_resolve/src/late/diagnostics.rs:289:28

error[E0268]: `break` outside of a loop
  --> $DIR/track.rs:5:5
   |
LL |     break rust
   |     ^^^^^^^^^^ cannot `break` outside of a loop
-Ztrack-diagnostics: created at compiler/rustc_passes/src/errors.rs:957:10

error: internal compiler error: It looks like you're trying to break rust; would you like some ICE?

note: the compiler expectedly panicked. this is a feature.

note: we would appreciate a joke overview: https://github.com/rust-lang/rust/issues/43162#issuecomment-320764675

note: rustc 1.66.0-dev running on x86_64-pc-windows-msvc

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0268, E0425.
For more information about an error, try `rustc --explain E0268`.
