src/test/ui/track-diagnostics/track.rs
// compile-flags: -Z track-diagnostics
// error-pattern: created at

fn main() {
    break rust
}
